--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "guitaro",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "lint-staged": {
@@ -48,6 +50,13 @@
     }
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
     "prettier": "2.5.1",
