--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "save-dev": "^0.0.1-security",
+    "tone": "^14.7.77",
     "web-vitals": "^2.1.4"
   },
   "lint-staged": {
